<resources>
    <string name="app_name">Wear Navigation</string>
    <string name="app_yes">Yes</string>
    <string name="app_no">No</string>

    <!-- Dialog -->
    <string name="app_dialog_leaving_title">Leaving app</string>
    <string name="app_dialog_leaving_message">Are you sure want to leave the app?</string>

    <!-- Menu -->
    <string name="app_menu_home">Home</string>
    <string name="app_menu_scan">Scanner</string>
    <string name="app_menu_show_devices">Show devices</string>
    <string name="app_menu_synchronization">Show synchronization</string>

    <!-- Main activity -->
    <string name="am_bluetooth_not_enabled">This application does not work without bluetooth.\nShutting down.</string>
    <string name="am_bluetooth_le_support">This app requires Bluetooth Low Energy to work.\nThis device does not support it.\nShutting down.</string>

    <!-- Configuration Activity -->
    <string name="ca_synchronization_successful">Synchronization complete.</string>
    <string name="ca_synchronization_failed">Synchronization failed.</string>

    <!-- *********************** -->
    <!-- Fingerprint scan status -->
    <!-- *********************** -->
    <string name="spo_status">Scan status</string>
    <string name="spo_status_none">N/A</string>
    <string name="spo_status_creating">Scheduling</string>
    <string name="spo_status_starting">Starting</string>
    <string name="spo_status_running">Scanning</string>
    <string name="spo_status_done">Complete</string>

    <!-- Scan status data -->
    <string name="spo_data_count_default">0</string>
    <string name="spo_data_bluetooth_title">BL</string>
    <string name="spo_data_wireless_title">W</string>
    <string name="spo_data_cellular_title">C</string>
</resources>
