<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_show_scan"
        android:icon="@drawable/ic_scan_24dp"
        android:title="@string/app_menu_scan"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/action_show_devices"
        android:icon="@drawable/ic_devices_24dp"
        android:title="@string/app_menu_show_devices"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/action_show_synchronization"
        android:icon="@drawable/ic_sync_data_30dp"
        android:title="@string/app_menu_synchronization"
        app:showAsAction="always"
        android:visible="false"/>

</menu>